--- a/site/module2-solution/css/styles.css
+++ b/site/module2-solution/css/styles.css
@@ -2,10 +2,12 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: sans-serif
 }
 h1 {
   margin-bottom: 15px;
   text-align: center;
+  font-size: 175%;
 }
 
 .d {
@@ -32,6 +34,7 @@ h3 {
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  font-size: 125%;
 }
 
 .text {
